# icechat

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: channel.rs  contact.rs  conversation.rs  lib.rs  local.rs  member.rs  patch.rs  prelude.rs  sync.rs  uuid.rs
entity/src/crdt/: attachment.rs  contact.rs  conversation.rs  member.rs  message.rs  mod.rs  sequence.rs  writable.rs
entity/src/entity/: attachment.rs  channel.rs  contact.rs  conversation.rs  initial_sync.rs  key.rs  local.rs  member.rs  message.rs  mod.rs  prelude.rs  sync.rs
entity/src/patch/: attachment.rs  contact.rs  conversation.rs  member.rs  message.rs  mod.rs
icechat-egui/: Cargo.toml
icechat-egui/src/: chat.rs  main.rs
icechat-server/: Cargo.toml
icechat-server/src/: main.rs
migration/: Cargo.toml
migration/src/: id.rs  lib.rs  m20220101_000001_create_table.rs  m20230326_000001_add_attachment.rs  m20230326_000001_create_table.rs  main.rs
src/: channel.rs  channel_pipe.rs  chat.rs  database.rs  doc_ex.rs  fragmentable.rs  lib.rs  main.rs  notification.rs  pipe_sync.rs  poll_runtime.rs
src/database/: doc_ex.rs  error.rs  mod.rs  sqlite_sync.rs  sync.rs
