[package]
name = "icechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.3.0"
byteorder = "1.4.3"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10.0"
futures-util = "0.3.26"
icepipe = "0.2.1"
thiserror = "1.0.38"
tokio = "1.25"
uuid = "1.3.0"

[dev-dependencies]
rstest = "0.16.0"
