[package]
name = "icechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automerge = "0.3.0"
bincode = "1.3"
byteorder = "1.4.3"
clap = { version = "4.1", features = ["derive"] }
eframe = { version = "0.20.1", default-features = false, features = ["wgpu", "default_fonts"] }
egui_dock = "0.3.1"
env_logger = "0.10.0"
futures-util = "0.3.26"
icepipe = "0.4.1"
log = "0.4.17"
notify-rust = "4.7.0"
rfd = "0.11.0"
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"
tokio = "1.25"
uuid = "1.3.0"

[dev-dependencies]
rstest = "0.16.0"
