[package]
name = "icechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
byteorder = "1.4.3"
entity = { path = "entity" }
futures-util = "0.3.26"
icepipe = "0.5.0"
log = "0.4.17"
migration = { path = "migration" }
notify-rust = "4.7.0"
ring = "0.16.20"
sqlx = "0.6"
sea-orm = { version = "^0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.38"
tokio = "1.25"
uuid = "1.3.0"

[dev-dependencies]
rstest = "0.16.0"

[workspace]
members = [
    "entity",
    "icechat-egui",
    "icechat-server",
    "migration",
]