[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
futures = "0.3.26"
sea-orm = { version = "0.11.0", features = ["macros"] }
serde = { version = "1.0.154", features = ["derive"] }
uuid = "1.3"

[dev-dependencies]
tokio = { version = "1.25", features = ["macros", "rt"] }