[package]
name = "icechat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
env_logger = "0.10.0"
futures-util = "0.3.26"
icechat = { path = "../" }
log = "0.4"
thiserror = "1.0.38"
tokio = "1.25"
uuid = "1.3.0"
