[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
env_logger = "0.10"
sea-orm = { version = "^0", features = ["macros"] }

[dependencies.sea-orm-migration]
version = "0.11.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
